# vitessce-python

./: .buildinfo  .coveragerc_omit  .coveragerc_real  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  api_config.html  api_data.html  config_api.html  data_examples.html  environment.yml  genindex.html  getting_started.html  index.html  install.json  objects.inv  postBuild  py-modindex.html  pyproject.toml  pytest.ini  screenshots.html  search.html  searchindex.js  setup.cfg  setup.py  vitessce-jupyter.json  vitessce.json  widget_api.html  widget_examples.html  wrappers.html
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  docs.yml  lint.yml  test-core-36.yml  test-demos.yml  test-package.yml  test.yml  test_demos.yml  test_js.yml  test_python.yml  test_python_36.yml  test_python_37_310.yml  test_python_38.yml  test_widget.yml
_sources/: api_data.rst.txt  data_examples.rst.txt  getting_started.rst.txt  index.rst.txt  wrappers.rst.txt
_sources/notebooks/: data_export_s3.ipynb.txt  widget_brain.ipynb.txt  widget_imaging.ipynb.txt  widget_imaging_segmentation.ipynb.txt  widget_loom.ipynb.txt  widget_pbmc.ipynb.txt  widget_pbmc_remote.ipynb.txt  widget_shortcut.ipynb.txt
binder/: environment.yml
demos/: .envrc  .gitignore  README.md  Snakefile  common.smk  create_demo.sh  dryrun_environment.yml  environment.yml  fill_template.py
demos/borm_2022_preprint/: Snakefile
demos/cao-2020/: Snakefile  config.yml
demos/codeluppi-2018/: Snakefile  config.yml  vitessce.template.json
demos/codeluppi-2018-via-zarr/: Snakefile  config.yml  vitessce.template.json
demos/codeluppi_2018_nature_methods/: Snakefile  vitessce.json  vitessce_csv.json  vitessce_zarr.json
demos/combat-2022/: Snakefile  Untitled.ipynb  config.yml  vitessce.template.json
demos/combat_2022_cell/: Snakefile  vitessce.json
demos/eng-2019/: Snakefile  config.yml  vitessce.template.json
demos/habib-2017/: Snakefile  config.yml  vitessce.template.json
demos/habib_2017_nature_methods/: .gitignore  Snakefile  vitessce.json
demos/human-lymph-node-10x-visium/: Snakefile  config.yml  vitessce.template.json
demos/human_intestine_2020_hubmap/: README.md  Snakefile
demos/human_lymph_node_10x_visium/: Snakefile  config.yml  vitessce.json
demos/kuppe-2022/: Snakefile  config.yml  vitessce.json  vitessce.template.json
demos/kuppe_2022_nature/: Snakefile  config.yml  vitessce.json
demos/marshall-2022/: Snakefile  config.yml  vitessce.template.json
demos/marshall_2022_iscience/: vitessce.json
demos/meta-2022-azimuth/: Snakefile  config.yml  vitessce.template.json
demos/meta_2022_azimuth/: vitessce.json
demos/mouse_brain_10x_visium/: Snakefile
demos/salcher-2022/: Snakefile  config.yml  o2_sizes.txt  sizes.ipynb
demos/satija-2020/: Snakefile  config.yml  vitessce.template.json
demos/sikkema-2023/: Snakefile  config.yml
demos/sn-atac-seq-hubmap-2020/: Snakefile  config.yml  vitessce.template.json
demos/spatialdata-2024/: Snakefile  config.yml
demos/toy/: Snakefile  Snakefile-2  Untitled-1.ipynb  Untitled.ipynb  config.yml  normalize_data.py
demos/visium_associated_xenium_io/: Snakefile
demos/visium_io/: Snakefile
demos/wang-2018/: Snakefile  config.yml  vitessce.template.json
docs/: api_config.rst  api_data.rst  api_data_utils.rst  conf.py  config_api.rst  data_examples.rst  data_options.rst  getting_started.rst  index.rst  screenshots.rst  widget_api.rst  widget_examples.rst  widget_plugins.rst  wrappers.rst
docs/_static/: stylesheet.css
docs/notebooks/: .envrc  0.0-widget_brain.ipynb  0.2-widget_imaging.ipynb  0.3-widget_pbmc.ipynb  0.5-widget_shortcut.ipynb  0.6-widget_from_dict.ipynb  0.8-widget_imaging_segmentation.ipynb  1.0-data_export_s3.ipynb  1.1-data_export_files.ipynb  1.2-data_conversion.ipynb  2.2-web_app_brain.ipynb  README.md  cellbrowser_to_vitessce_config_conversion.ipynb  cellbrowser_to_vitessce_config_conversion.mo.py  cellxgene_widget.ipynb  config_to_python.ipynb  config_to_python.mo.py  create_mini_dataset.ipynb  data_conversion.ipynb  data_conversion.mo.py  data_export_files.ipynb  data_export_files.mo.py  data_export_s3.ipynb  data_export_s3.mo.py  environment.yml  example-config-dries.json  example_configs.py  marimo-wasm.mo.py  marimo-wasm.py  marimo.mo.py  marimo.py  page_mode_comparative.ipynb  (+73 more)
js/: README.md  package-lock.json  package.json  webpack.config.js
notebooks/: .envrc  README.md  cell-selection.ipynb  config_to_python.html  convert_snapatac_to_zarr.py  data_conversion.html  data_export_files.html  data_export_files.ipynb  data_export_s3.html  data_export_s3.ipynb  environment.yml  example-cell-selection.ipynb  example-config-creation.ipynb  example-minimal.ipynb  example_configs.py  export-s3.ipynb  view-config-api-mockup.ipynb  web_app_brain.html  widget-embedding-shortcut.ipynb  widget-embedding.ipynb  widget-from_dict.ipynb  widget-higlass.ipynb  widget-pbmc.ipynb  widget-scatterplot-demo.ipynb  widget_brain.html  widget_brain.ipynb  widget_from_dict.html  widget_from_dict.ipynb  widget_genomic_profiles.html  widget_genomic_profiles.ipynb  widget_imaging.html  widget_imaging.ipynb  widget_imaging_segmentation.html  widget_loom.html  widget_loom.ipynb  widget_on_colab.html  widget_pbmc.html  widget_pbmc_remote.html  widget_shortcut.html
scripts/: convert_mo_to_ipynb.sh
test/: download.sh  test_config.py  test_wrappers.py
tests/: create_test_data.py  create_xenium_filtered_points.py  download.sh  test_anndata_utils.py  test_config.py  test_config_converter.py  test_config_updates.py  test_converters.py  test_entities.py  test_ome_utils.py  test_packaging.py  test_sdata_points_zorder.py  test_wrappers.py
tests-widget/: example.spec.js  package.json  playwright.config.js  pnpm-lock.yaml
vitessce/: __init__.py  _version.py  config.py  config_converter.py  constants.py  convert_to_vitessce_config.py  converters.py  data.py  entities.py  example.py  export.py  file_def_utils.py  repr.py  routes.py  utils.py  widget.py  wrappers.py
(+123 files in other folders)
